--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -11,3 +11,8 @@ jobs:
         run: |
           docker build . -f Dockerfile.dev -t kodega2016/react-app
           docker container run -e CI=true kodega2016/react-app npm run test
+      - name: login to docker hub
+        run: docker login -u ${{secrets.DOCKER_USERNAME}} -p ${{secrets.DOCKER_PASSWORD}}
+      - name: Build the docker image
+        run: docker build . -f Dockerfile.dev -t kodega2016/react-app
+
