--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -11,8 +11,23 @@ jobs:
         run: |
           docker build . -f Dockerfile.dev -t kodega2016/react-app
           docker container run -e CI=true kodega2016/react-app npm run test
+
       - name: login to docker hub
         run: docker login -u ${{secrets.DOCKER_USERNAME}} -p ${{secrets.DOCKER_PASSWORD}}
+
       - name: Build the docker image
         run: docker build . -f Dockerfile.dev -t kodega2016/react-app
 
+      - name: Generate deployment package
+        run: zip -r deploy.zip . -x '*.git*'
+
+      - name: Deploy to EB
+        uses: einaregilsson/beanstalk-deploy@v22
+        with:
+          aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          application_name: react-app
+          environment_name: React-app-env
+          version_label: 12345
+          region: us-west-1
+          deployment_package: deploy.zip
