added existing bucket option

--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -32,3 +32,4 @@ jobs:
           region: us-east-1
           deployment_package: deploy.zip
           existing_bucket_name: elasticbeanstalk-us-east-1-058264439907
+          use_existing_version_if_available: true
