--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -11,6 +11,12 @@ jobs:
         run: |
           docker build . -f Dockerfile.dev -t kodega2016/react-app
           docker container run -e CI=true kodega2016/react-app npm run test
+  deploy:
+    runs-on: ubuntu-latest
+    needs: unit_test
+    steps:
+      - name: checkout the code
+        uses: actions/checkout@v4
 
       - name: login to docker hub
         run: docker login -u ${{secrets.DOCKER_USERNAME}} -p ${{secrets.DOCKER_PASSWORD}}
